@@ -47,7 +47,7 @@ if cal > "$PLUGIN_OUTFILE" 2>&1 ; then
 				curr_year=`date +%Y`
 			if [ "$curr_year-$curr_month-$dn" = "$entry_year-$entry_month-$entry_day" ] ; then
 				set_link="1"
-				dn='<a href="'$BLOG_URL'/'$ARCHIVES'/'$FILE_BY_DIR'/'$entry_year-$entry_month'.'$NB_FILETYPE'#'$NB_EntryDay'">'$dn'</a>'
+				dn='<a href="'$BLOG_URL'/'$MONTHLY_DIR'/'$entry_year-$entry_month'.'$NB_FILETYPE'#'$NB_EntryDay'">'$dn'</a>'
 				echo '<td align="center"><span>'$dn'</span></td>' >> "$PLUGIN_OUTFILE"
 			fi
 			done
